<resources>
    <string name="app_name">IOMirea</string>
    <string name="version" translatable="false">0.4-dev</string>
    <string name="versionText">Version</string>
    <string name="title_activity_chat">Chats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">IOMirea</string>
    <string name="nav_header_subtitle">add address later</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Administrator</string>
    <string name="time">6:29</string>
    <string name="last_message">No messages yet</string>
    <string name="title_activity_message">Chat with Administrator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_logs">Logs</string>
    <string name="Settings">Settings</string>

    <!-- Strings related to chat window -->
    <string name="toast_text_copied_to_clipboard">Copied to clipboard</string>

    <!-- Strings related to networking -->
    <string name="net_request_failed_with_code">Request failed with code: %1$d</string>
    <string name="net_request_failed_with_message">Request failed: %1$s</string>

    <!-- Strings related to bug report screen -->
    <string name="bug_name">Bugreport</string>
    <string name="bugreport_attach_device_info_checkbox">Attach device info to report</string>
    <string name="bugreport_send_button">Send</string>
    <string name="bugreport_close_button">Close</string>
    <string name="bugreport_hint">Input text here...</string>
    <string name="bugreport_mintext">Not enough characters</string>
    <string name="bugreport_delivery_success">Bugreport delivered</string>
    <string name="bugreport_delivery_fail">Bugreport delivery failed (%1$d)</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Interface</string>

    <string name="pref_dark_theme">Dark Theme</string>
    <string name="pref_title_language">Languages and Regions</string>
    <string-array name="pref_languages">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="pref_languages_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="pref_description_dark_theme">"Set Dark Theme"</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and addresses</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" color="@color/colorAccent">Notifications
    </string>

    <string name="pref_title_new_message_notifications">Message notifications</string>

    <string name="pref_title_ringtone">Notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="bar_secure">Create secure chat</string>
    <string name="bar_group">Create group chat</string>
    <string name="bar_help">Help</string>
    <string name="bar_bug">Report a bug</string>
    <string name="bar_info">Info</string>
    <string name="bar_logout">Log out</string>

    <string name="message_assist">Enter message here...</string>
    <string name="their_message">The crab people are attacking</string>
    <string name="their_user">Other user</string>

    <string name="bottom_copy">Copy</string>
    <string name="bottom_delete">Delete</string>
    <string name="bottom_edit">Edit</string>

    <string name="dark_theme">Dark theme</string>
    <string name="message_editing_success">Message edited</string>
    <string name="message_deleting_error">finish editing message</string>
</resources>
