<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackgroundFloating">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/copyLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_copy"
            android:textColor="?editTextColor"

            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/deleteLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete_black_24dp"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_delete"
            android:textColor="?editTextColor"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/editLinearLayout"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_edit_white_24dp"
            android:tint="@color/colorAccent"
            android:layout_margin="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_edit"
            android:textColor="?editTextColor"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            />

    </LinearLayout>

</LinearLayout>